@@ -4,4 +4,4 @@
 
 SET(CPACK_PACKAGE_VERSION_MAJOR "2")
 SET(CPACK_PACKAGE_VERSION_MINOR "2")
-SET(CPACK_PACKAGE_VERSION_PATCH "4rc1")
+SET(CPACK_PACKAGE_VERSION_PATCH "4rc2")
