@@ -91,3 +91,4 @@ SOURCE Thu Nov 20 13:48:44 EST 2008 (2.2.2, try with new server)
 SOURCE Tue Apr 21 16:32:35 EDT 2009 (preview 2.2.3)
 SOURCE Fri May 22 11:42:03 EDT 2009 (real 2.2.3)
 SOURCE Tue Jun  9 15:48:05 EDT 2009 (try 2.2.4rc1)
+SOURCE Sun Jun 14 13:35:56 EDT 2009 (increase timeout)
