@@ -1,3 +1,8 @@
+2009-06-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/harness/PortReaderBufferTest.cpp: increase
+	timeout for callback test, it may be too tight.
+
 2009-06-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* example/swig/: lots of updates to make Java examples work again
